# healthcare-report-agent

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
agent/: config.py  data_dictionary.py  database_tool.py  langgraph_agent.py  news_tool.py  sql_generation.py  summary_tool.py
docs/: README_DIAGRAM.md  architecture.mmd  data_dictionary_clean.json
metrics/: queries.py
report/: agent_summary.py  app.py
scripts/: check_db.py  data_quality_check.py  load_data.py  test_db_access.py
tests/: test_data_quality_check.py  test_load_data.py  test_queries.py  test_queries_utils.py
