[project]
name = "healthcare-report-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "langgraph>=0.5.3",
    "matplotlib>=3.10.3",
    "openai>=1.96.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=20.0.0",
    "pytest>=8.4.1",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.1",
]
